--- a/PaperEx170308.Rmd
+++ b/PaperEx170308.Rmd
@@ -86,7 +86,10 @@ library("sn")
 #accepts a dataframe with columns id and data
 fitloops<-function(datawithids,loops=10,maxcp=5){
   dists="Both"
-  datawithids<-unique(datawithids)
+  datawithids2<-unique(datawithids)
+  if (nrow(unique(datawithids))!=nrow(datawithids)){
+    stop("The input data (datawithids) must not include duplicates. Please remove duplicates.")
+  }
   data<-datawithids$data
   datapts<-length(data)
   norms<-vector("list")
@@ -138,7 +141,7 @@ fitloops<-function(datawithids,loops=10,maxcp=5){
       ic=i
     }
   }
-  
+
   if (i==maxcp & j==loops+1 & max(errors[maxcp, 2])<=2 & max(errors[maxcp, 1])<=2 ) {
     nobj<-vector("list")
     nobj$mc<-matrix(nrow=maxcp, ncol=loops)
@@ -1268,30 +1271,39 @@ summaryout<-function(cutobj,fileandpathname=NULL){
 
 
 
+
+
 ```
 
 
 #Example 1
 ```{r example1, echo=T}
 
-#examp1<-read.csv(file="/Users/sarahsullivan/Documents/SullivanDocs/Rwd/cutoff/ex1.csv", colClasses=c("NULL", NA, NA))
+examp1<-read.csv(file="/Users/sarahsullivan/Documents/SullivanDocs/Rwd/cutoff/ex1.csv", colClasses=c("NULL", NA, NA))
 
-#hist(examp1$data, breaks=100, main="Histogram of Data")
-#dens1<-density(examp1$data)
-#plot(dens1, main="Density of Data")
+hist(examp1$data, breaks=100, main="Histogram of Data")
+dens1<-density(examp1$data)
+plot(dens1, main="Density of Data")
 
-#fitloopsobject<-fitloops(datawithids=examp2)
-  #might not run due to 5 component solution not being easily optimized, if it doesn't run either load the full file, or run fitloopsobject<-fitloops(datawithids=examp2,maxcp=4): 
-#load(file="/Users/sarahsullivan/Documents/SullivanDocs/Rwd/cutoff/ex1fitloops")
+#fitloopsobject1<-fitloops(datawithids=examp2)
+  #might not run due to 5 component solution not being easily optimized, if it doesn't run either load the full file, or run fitloopsobject1<-fitloops(datawithids=examp2,maxcp=4): 
+load(file="/Users/sarahsullivan/Documents/SullivanDocs/Rwd/cutoff/ex1fitloops")
 
-#bicgraph(model=fitloopsobject1)
+bicgraph(fitobj=fitloopsobject1)
 
-#modelpickobject2<-modelpick(fitloopsobject1)
+modelpickobject1<-modelpick(fitloopsobject1)
 
-#rawuncertgraph(modelpickobject1)
-#rawdistgraph(modelpickobject1)
-#rawhistcuts(modelpickobject1)
+rawuncertgraph(modelpickobject1)
+rawdistgraph(modelpickobject1)
+rawhistcuts(modelpickobject1)
 
+cutoffobject1<-cutoff(modelpickobj = modelpickobject1)
+
+cutuncertgraph(cutobj = cutoffobject1)
+cutdistgraph(cutobj = cutoffobject1)
+
+summaryobject1<-summaryout(cutobj = cutoffobject1)
+summaryobject1$outtab
 
 ```
 
@@ -1299,7 +1311,8 @@ summaryout<-function(cutobj,fileandpathname=NULL){
 
 ```{r example2, echo=T}
 
-examp2<-read.csv(file="/Users/sarahsullivan/Documents/SullivanDocs/Rwd/cutoff/ex2.csv")
+examp2<-read.csv(file="/Users/sarahsullivan/Documents/SullivanDocs/Rwd/cutoff/ex2.csv", stringsAsFactors = F, colClasses=c("NULL", NA, NA))
+examp2<-examp2[,c("id", "data")]
 
 hist(examp2$data, breaks=100, main="Histogram of Data")
 dens2<-density(examp2$data)
@@ -1321,4 +1334,5 @@ cutuncertgraph(cutobj = cutoffobject2)
 cutdistgraph(cutobj = cutoffobject2)
 
 summaryobject2<-summaryout(cutobj = cutoffobject2)
+summaryobject2$outtab
 ```
